[package]
name = "tower-default-headers"
version = "0.1.0"
authors = ["Ron Waldon <jokeyrhyme@jokeyrhy.me>"]
edition = "2021"
description = "tower-compatible middleware to set default HTTP response headers"
readme = "README.md"
homepage = "https://gitlab.com/jokeyrhyme/tower-default-headers-rs"
repository = "https://gitlab.com/jokeyrhyme/tower-default-headers-rs.git"
license = "MIT"
keywords = ["tower", "http", "headers", "layer", "middleware"]
categories = ["web-programming", "web-programming::http-server"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
futures-util = "0.3"
http = "0.2"
pin-project = "1"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = "0.3"
hyper = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }

[profile.release]
codegen-units = 1
lto = "fat"

